@@ -13,7 +13,11 @@ Require-Bundle: org.eclipse.core.filesystem,
  org.eclipse.ui,
  org.eclipse.ui.views,
  org.eclipse.ui.editors,
- org.eclipse.ui.ide
+ org.eclipse.ui.ide,
+ org.eclipse.debug.core;resolution:=optional,
+ org.eclipse.debug.ui;resolution:=optional,
+ org.eclipse.jdt.debug;resolution:=optional,
+ org.eclipse.jdt.debug.ui;resolution:=optional
 Bundle-RequiredExecutionEnvironment: JavaSE-1.8
 Bundle-ActivationPolicy: lazy
 Export-Package: org.exbin.bined,
